--- a/index.html
+++ b/index.html
@@ -1,19 +1,79 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Blog</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script>
-  alert("hello");
-  </script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homepage | Rakhi Ray</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/fbefb00d9a.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
+
 <body>
-  <h1>Hello</h1>
+    <div class="container pt-5">
+        <div class="row">
+            <div class="col-sm-8 col-md-8 col-xl-8 col-xxl-8">
+                <h2 style="color:#E5EAF5;">Hi.<br /> I am Rakhi Ray.</h2>
+                <p style="color:#E5EAF5;">Learner | Web Developer</p>
+                <!-- <div class="wrapper">
+                    <div class="social-icons">
+                        <a href="https://icons8.com/icon/62856/github" target="_blank" rel="auther">
+                            <i class="fa fa-bolt"></i>
+                        </a>
+                    </div>
+                </div> -->
+                <div class="social-icons">
+                    <a href="" target="_blank">
+                        <i class="fa-solid fa-envelope"></i>
+                    </a>
+
+                    <a href="https://github.com/rakhiray" target="_blank">
+                        <i class="fa-brands fa-github ps-3"></i>
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/rakhi-ray-4a370417a" target="_blank">
+                        <i class="fa-brands fa-linkedin ps-3"></i>
+                    </a>
+                </div>
+
+                <br>
+                <button type="button" class="btn btn-outline-info">Download Resume</button>
+
+            </div>
+
+
+
+            <div class="col-sm-4 col-md-4 col-xl-4 col-xxl-4">
+                <ul class="lis" style="color: #E5EAF5;">
+                    <li class="list-ele">
+                        <h6>Work Experience</h6>
+                        <!-- <p></p> -->
+                    </li>
+                    <br>
+                    <li class="list-ele">
+                        <h6>Training & Certifications</h6>
+                        <!-- <p></p> -->
+                    </li>
+                    <br>
+                    <li class="list-ele">
+                        <h6>Technical Skills</h6>
+                        <!-- <p></p> -->
+                    </li>
+                    <br>
+                    <li class="list-ele">
+                        <h6>Qualifications</h6>
+                        <!-- <p></p> -->
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
