--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     </div>
                 </div> -->
                 <div class="social-icons">
-                    <a href="" target="_blank">
-                        <i class="fa-solid fa-envelope"></i>
+                    <a href="mailto:rakhiiray14@gmail.com" target="_blank">
+                        <i class="fa-solid fa-envelope icon-style"></i>
                     </a>
 
                     <a href="https://github.com/rakhiray" target="_blank">
@@ -42,7 +42,7 @@
                 </div>
 
                 <br>
-                <button type="button" class="btn btn-outline-info">Download Resume</button>
+                <a href="/rakhi_cv.pdf" download class="btn btn-outline-info">Download Resume</a>
 
             </div>
 
