color-scheme changes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
     <div class="container pt-5">
         <div class="row">
             <div class="col-sm-8 col-md-8 col-xl-8 col-xxl-8">
-                <h2 style="color:#E5EAF5;">Hi.<br /> I am Rakhi Ray.</h2>
-                <p style="color:#E5EAF5;">Learner | Web Developer</p>
+
+                <h6 style="color:#0dcaf0;">Hi.</h6>
+                <h2 style="color:#0dcaf0;">I am Rakhi Ray.</h2>
+                <h2 style="color:#a4abbb;">I build things for the web.</h2>
+                <p style="color:#9793a5;">I am a Computer Science Engineer and looking for an opportunity to upskill my
+                    technical knowledge. My skill set includes HTML, CSS, JavaScript, SQL and Core Java.</p>
                 <!-- <div class="wrapper">
                     <div class="social-icons">
                         <a href="https://icons8.com/icon/62856/github" target="_blank" rel="auther">
@@ -28,16 +32,16 @@
                     </div>
                 </div> -->
                 <div class="social-icons">
-                    <a href="mailto:rakhiiray14@gmail.com" target="_blank">
+                    <a style="text-decoration: none;" href="mailto:rakhiiray14@gmail.com" target="_blank">
                         <i class="fa-solid fa-envelope icon-style"></i>
                     </a>
 
-                    <a href="https://github.com/rakhiray" target="_blank">
-                        <i class="fa-brands fa-github ps-3"></i>
+                    <a style="text-decoration: none;" href="https://github.com/rakhiray" target="_blank">
+                        <i class="fa-brands fa-github icon-style ps-3"></i>
                     </a>
 
                     <a href="https://www.linkedin.com/in/rakhi-ray-4a370417a" target="_blank">
-                        <i class="fa-brands fa-linkedin ps-3"></i>
+                        <i class="fa-brands fa-linkedin icon-style ps-3"></i>
                     </a>
                 </div>
 
