--- a/index.html
+++ b/index.html
@@ -17,20 +17,43 @@
 <body>
     <div class="container pt-5">
         <div class="row">
-            <div class="col-sm-8 col-md-8 col-xl-8 col-xxl-8">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <nav>
+                    <ul style="color: #E5EAF5;">
+                        <li>
+                            <a href="/experience.html">Work Experience</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/certifications.html">Training & Certifications</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/skills.html">Technical Skills</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/qualifications.html">Qualifications</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/activities.html">Activities</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
 
                 <h6 style="color:#0dcaf0;">Hi.</h6>
                 <h2 style="color:#0dcaf0;">I am Rakhi Ray.</h2>
                 <h2 style="color:#a4abbb;">I build things for the web.</h2>
                 <p style="color:#9793a5;">I am a Computer Science Engineer and looking for an opportunity to upskill my
-                    technical knowledge. My skill set includes HTML, CSS, JavaScript, SQL and Core Java.</p>
-                <!-- <div class="wrapper">
-                    <div class="social-icons">
-                        <a href="https://icons8.com/icon/62856/github" target="_blank" rel="auther">
-                            <i class="fa fa-bolt"></i>
-                        </a>
-                    </div>
-                </div> -->
+                    technical knowledge.
+                    <br> My skill set includes HTML, CSS, JavaScript, SQL and Core Java.</p>
+
                 <div class="social-icons">
                     <a style="text-decoration: none;" href="mailto:rakhiiray14@gmail.com" target="_blank">
                         <i class="fa-solid fa-envelope icon-style"></i>
@@ -48,32 +71,6 @@
                 <br>
                 <a href="/rakhi_cv.pdf" download class="btn btn-outline-info">Download Resume</a>
 
-            </div>
-
-
-
-            <div class="col-sm-4 col-md-4 col-xl-4 col-xxl-4">
-                <ul class="lis" style="color: #E5EAF5;">
-                    <li class="list-ele">
-                        <h6>Work Experience</h6>
-                        <!-- <p></p> -->
-                    </li>
-                    <br>
-                    <li class="list-ele">
-                        <h6>Training & Certifications</h6>
-                        <!-- <p></p> -->
-                    </li>
-                    <br>
-                    <li class="list-ele">
-                        <h6>Technical Skills</h6>
-                        <!-- <p></p> -->
-                    </li>
-                    <br>
-                    <li class="list-ele">
-                        <h6>Qualifications</h6>
-                        <!-- <p></p> -->
-                    </li>
-                </ul>
             </div>
         </div>
 
