--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="container pt-5">
-        <div class="row">
+        <div class="row" style="padding-bottom: 60px;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <nav>
                     <ul style="color: #E5EAF5;">
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row card-main">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
 
                 <h6 style="color:#0dcaf0;">Hi.</h6>
@@ -70,10 +70,8 @@
 
                 <br>
                 <a href="/rakhi_cv.pdf" download class="btn btn-outline-info">Download Resume</a>
-
             </div>
         </div>
-
     </div>
 </body>
 
