--- a/certifications.html
+++ b/certifications.html
@@ -4,19 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <link rel="stylesheet" href="certificates.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Training & Certifications | Rakhi Ray</title>
 </head>
 
-<body>
+<body style="background-color: #252525;">
     <div class="container">
         <div class="row">
-            <h3>Affimintus Technology Services, Indore (June'15)</h3>
-            <p>A 45 days Industrial training in JAVA J2SE and J2EE Web Application Development</p>
+            <h3 style="color:#0dcaf0;">Affimintus Technology Services, Indore (June'15)</h3>
+            <p style="color:#9793a5;">A 45 days Industrial training in JAVA J2SE and J2EE Web Application Development
+            </p>
         </div>
         <div class="row">
-            <h3>SSI, Indore (Jan '14) </h3>
-            <p>A six weeks C and C++ Programming Training and Certification</p>
+            <h3 style="color:#0dcaf0;">SSI, Indore (Jan '14) </h3>
+            <p style="color:#9793a5;">A six weeks C and C++ Programming Training and Certification</p>
         </div>
     </div>
 </body>
