--- a/experience.html
+++ b/experience.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="experience.css"><meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work Experience | Rakhi Ray</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-            <h4>02/2022-06/2022</h4>
-            <h3>Jr. SEO Executive</h3>
-            <h3>SNV Services | Indore | India</h3>
-            <ul>
+            <h4 style="color:#0dcaf0;">02/2022-06/2022</h4>
+            <h3 style="color:#0dcaf0;">Jr. SEO Executive</h3>
+            <h3 style="color:#0dcaf0;">SNV Services | Indore | India</h3>
+            <ul style="color:#9793a5;">
                 <li>Conducted on-page and off-page optimization for client websites.</li>
                 <li>Monitored website traffic and performance using Google Analytics.</li>
                 <li>Implemented link building campaigns to increase website authority.</li>
@@ -24,10 +25,10 @@
         </div>
 
         <div class="row">
-            <h4>08/2021-10/2021</h4>
-            <h3>Software Developer Intern</h3>
-            <h3>Techcoopers Software Solutions Pvt Ltd | Indore | India</h3>
-            <ul>
+            <h4 style="color:#0dcaf0;">08/2021-10/2021</h4>
+            <h3 style="color:#0dcaf0;">Software Developer Intern</h3>
+            <h3 style="color:#0dcaf0;">Techcoopers Software Solutions Pvt Ltd | Indore | India</h3>
+            <ul style="color:#9793a5;">
                 <li>Created user-friendly screens using HTML and CSS.</li>
                 <li>Integrated third party API in NodeJS app to fetch data.</li>
                 <li>Stored data from third party app to our app database.</li>
