--- a/qualifications.html
+++ b/qualifications.html
@@ -10,6 +10,33 @@
 
 <body>
     <div class="container">
+        <div class="row" style="padding-bottom: 60px;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <nav>
+                    <ul style="color: #E5EAF5;">
+                        <li>
+                            <a href="/experience.html">Work Experience</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/certifications.html">Training & Certifications</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/skills.html">Technical Skills</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/qualifications.html">Qualifications</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/activities.html">Activities</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
         <div class="row">
             <h4>2018-2020</h4>
             <h3>MBA IT|HR, SAGE UNIVERSITY INDORE</h3>
