--- a/activities.html
+++ b/activities.html
@@ -8,6 +8,33 @@
 </head>
 <body>
     <div class="container">
+        <div class="row" style="padding-bottom: 60px;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <nav>
+                    <ul style="color: #E5EAF5;">
+                        <li>
+                            <a href="/experience.html">Work Experience</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/certifications.html">Training & Certifications</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/skills.html">Technical Skills</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/qualifications.html">Qualifications</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/activities.html">Activities</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
         <div class="row">
             <ul>
                 <li>1st rank and gold medal in SIRIGANNADA PRATIBHA PARIKSHA at state level organized by Karnataka Govt.</li>
