--- a/certifications.html
+++ b/certifications.html
@@ -12,6 +12,33 @@
 
 <body style="background-color: #252525;">
     <div class="container">
+        <div class="row" style="padding-bottom: 60px;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <nav>
+                    <ul style="color: #E5EAF5;">
+                        <li>
+                            <a href="/experience.html">Work Experience</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/certifications.html">Training & Certifications</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/skills.html">Technical Skills</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/qualifications.html">Qualifications</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/activities.html">Activities</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
         <div class="row">
             <h3 style="color:#0dcaf0;">Affimintus Technology Services, Indore (June'15)</h3>
             <p style="color:#9793a5;">A 45 days Industrial training in JAVA J2SE and J2EE Web Application Development
