--- a/experience.html
+++ b/experience.html
@@ -11,6 +11,33 @@
 
 <body>
     <div class="container">
+        <div class="row" style="padding-bottom: 60px;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <nav>
+                    <ul style="color: #E5EAF5;">
+                        <li>
+                            <a href="/experience.html">Work Experience</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/certifications.html">Training & Certifications</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/skills.html">Technical Skills</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/qualifications.html">Qualifications</a>
+                        </li>
+                        <br>
+                        <li>
+                            <a href="/activities.html">Activities</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
         <div class="row">
             <h4 style="color:#0dcaf0;">02/2022-06/2022</h4>
             <h3 style="color:#0dcaf0;">Jr. SEO Executive</h3>
