css of experience page is updated

--- a/index.html
+++ b/index.html
@@ -19,26 +19,31 @@
         <div class="row" style="padding-bottom: 60px;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <nav>
-                    <ul style="color: #E5EAF5;">
-                        <li>
-                            <a href="/experience.html">Work Experience</a>
+                    <ul class="nav-list" style="color: #E5EAF5;">
+                        <li class="list-ele">
+                            <a class="list-item" href="/index.html">Home</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/certifications.html">Training & Certifications</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/experience.html">Work Experience</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/skills.html">Technical Skills</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/certifications.html">Training & Certifications</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/qualifications.html">Qualifications</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/skills.html">Technical Skills</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/activities.html">Activities</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/qualifications.html">Qualifications</a>
                         </li>
+                        <br>
+                        <li class="list-ele">
+                            <a class="list-item" href="/activities.html">Activities</a>
+                        </li>
+
                     </ul>
                 </nav>
             </div>
