--- a/certifications.html
+++ b/certifications.html
@@ -7,6 +7,11 @@
 
     <link rel="stylesheet" href="certificates.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/fbefb00d9a.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <title>Training & Certifications | Rakhi Ray</title>
 </head>
 
@@ -16,6 +21,10 @@
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <nav>
                     <ul style="color: #E5EAF5;">
+                        <li class="list-ele">
+                            <a class="list-item" href="/index.html">Home</a>
+                        </li>
+                        <br>
                         <li>
                             <a href="/experience.html">Work Experience</a>
                         </li>
