--- a/experience.html
+++ b/experience.html
@@ -4,63 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
-    <link rel="stylesheet" href="experience.css"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="experience.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/fbefb00d9a.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work Experience | Rakhi Ray</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container pt-5">
         <div class="row" style="padding-bottom: 60px;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <nav>
-                    <ul style="color: #E5EAF5;">
-                        <li>
-                            <a href="/experience.html">Work Experience</a>
+                    <ul class="nav-list" style="color: #E5EAF5;">
+                        <li class="list-ele">
+                            <a class="list-item" href="/index.html">Home</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/certifications.html">Training & Certifications</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/experience.html">Work Experience</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/skills.html">Technical Skills</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/certifications.html">Training & Certifications</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/qualifications.html">Qualifications</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/skills.html">Technical Skills</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/activities.html">Activities</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/qualifications.html">Qualifications</a>
+                        </li>
+                        <br>
+                        <li class="list-ele">
+                            <a class="list-item" href="/activities.html">Activities</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </div>
-        <div class="row">
-            <h4 style="color:#0dcaf0;">02/2022-06/2022</h4>
-            <h3 style="color:#0dcaf0;">Jr. SEO Executive</h3>
-            <h3 style="color:#0dcaf0;">SNV Services | Indore | India</h3>
-            <ul style="color:#9793a5;">
-                <li>Conducted on-page and off-page optimization for client websites.</li>
-                <li>Monitored website traffic and performance using Google Analytics.</li>
-                <li>Implemented link building campaigns to increase website authority.</li>
-                <li>Researched and analysed competitor websites to identify SEO opportunities.</li>
-                <li>Wrote SEO-friendly content for client websites.</li>
-            </ul>
+        <div class="row" style="border-bottom: 1px solid #0dcaf0;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <i style="color:#0dcaf0;">02/2022-06/2022</i>
+                <h5 style="color:#0dcaf0;">Jr. SEO Executive</h5>
+                <h5 style="color:#0dcaf0;">SNV Services | Indore | India</h5>
+                <ul style="color:#9793a5;">
+                    <li>Conducted on-page and off-page optimization for client websites.</li>
+                    <li>Monitored website traffic and performance using Google Analytics.</li>
+                    <li>Implemented link building campaigns to increase website authority.</li>
+                    <li>Researched and analysed competitor websites to identify SEO opportunities.</li>
+                    <li>Wrote SEO-friendly content for client websites.</li>
+                </ul>
+            </div>
         </div>
 
-        <div class="row">
-            <h4 style="color:#0dcaf0;">08/2021-10/2021</h4>
-            <h3 style="color:#0dcaf0;">Software Developer Intern</h3>
-            <h3 style="color:#0dcaf0;">Techcoopers Software Solutions Pvt Ltd | Indore | India</h3>
-            <ul style="color:#9793a5;">
-                <li>Created user-friendly screens using HTML and CSS.</li>
-                <li>Integrated third party API in NodeJS app to fetch data.</li>
-                <li>Stored data from third party app to our app database.</li>
-                <li>Fixed software bugs and errors identified by users.</li>
-            </ul>
+        <div class="row pt-5" style="border-bottom: 1px solid #0dcaf0;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <i style="color:#0dcaf0;">08/2021-10/2021</i>
+                <h5 style="color:#0dcaf0;">Software Developer Intern</h5>
+                <h5 style="color:#0dcaf0;">Techcoopers Software Solutions Pvt Ltd | Indore | India</h5>
+                <ul style="color:#9793a5;">
+                    <li>Created user-friendly screens using HTML and CSS.</li>
+                    <li>Integrated third party API in NodeJS app to fetch data.</li>
+                    <li>Stored data from third party app to our app database.</li>
+                    <li>Fixed software bugs and errors identified by users.</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
