nav css updated

--- a/certifications.html
+++ b/certifications.html
@@ -15,47 +15,61 @@
     <title>Training & Certifications | Rakhi Ray</title>
 </head>
 
-<body style="background-color: #252525;">
-    <div class="container">
+<body>
+    <div class="container pt-5">
         <div class="row" style="padding-bottom: 60px;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <nav>
-                    <ul style="color: #E5EAF5;">
+                    <ul class="nav-list" style="color: #E5EAF5;">
                         <li class="list-ele">
                             <a class="list-item" href="/index.html">Home</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/experience.html">Work Experience</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/experience.html">Work Experience</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/certifications.html">Training & Certifications</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/certifications.html">Training & Certifications</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/skills.html">Technical Skills</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/skills.html">Technical Skills</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/qualifications.html">Qualifications</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/qualifications.html">Qualifications</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/activities.html">Activities</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/activities.html">Activities</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </div>
-        <div class="row">
-            <h3 style="color:#0dcaf0;">Affimintus Technology Services, Indore (June'15)</h3>
-            <p style="color:#9793a5;">A 45 days Industrial training in JAVA J2SE and J2EE Web Application Development
-            </p>
+
+        <div class="row" style="border-bottom: 1px solid #0dcaf0;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <h5 style="color:#0dcaf0;">SEED InfoTech | Pune (Ongoing)</h5>
+                <p style="color:#9793a5;">Full Stack Development training program in JAVA, Angular , SQL.</p>
+            </div>
         </div>
-        <div class="row">
-            <h3 style="color:#0dcaf0;">SSI, Indore (Jan '14) </h3>
-            <p style="color:#9793a5;">A six weeks C and C++ Programming Training and Certification</p>
+
+        <div class="row row pt-5" style="border-bottom: 1px solid #0dcaf0;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <h5 style="color:#0dcaf0;">Affimintus Technology Services, Indore (June'15)</h5>
+                <p style="color:#9793a5;">A 45 days Industrial training in JAVA J2SE and J2EE Web Application
+                    Development.
+                </p>
+            </div>
+        </div>
+
+        <div class="row pt-5" style="border-bottom: 1px solid #0dcaf0;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <h5 style="color:#0dcaf0;">SSI, Indore (Jan '14) </h5>
+                <p style="color:#9793a5;">A six weeks C and C++ Programming Training and Certification.</p>
+            </div>
         </div>
     </div>
 </body>
