--- a/qualifications.html
+++ b/qualifications.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="qualification.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/fbefb00d9a.js" crossorigin="anonymous"></script>
@@ -14,57 +15,67 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container pt-5">
         <div class="row" style="padding-bottom: 60px;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <nav>
-                    <ul style="color: #E5EAF5;">
+                    <ul class="nav-list" style="color: #E5EAF5;">
                         <li class="list-ele">
                             <a class="list-item" href="/index.html">Home</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/experience.html">Work Experience</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/experience.html">Work Experience</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/certifications.html">Training & Certifications</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/certifications.html">Training & Certifications</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/skills.html">Technical Skills</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/skills.html">Technical Skills</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/qualifications.html">Qualifications</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/qualifications.html">Qualifications</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/activities.html">Activities</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/activities.html">Activities</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </div>
-        <div class="row">
-            <h4>2018-2020</h4>
-            <h3>MBA IT|HR, SAGE UNIVERSITY INDORE</h3>
-            <h3>8.11 CGPA</h3>
+        <div class="row" style="border-bottom: 1px solid #0dcaf0;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <i style="color:#9793a5;">2018-2020</i>
+                <h6 style="color:#9793a5;">MBA Information Technology | SAGE UNIVERSITY INDORE</h6>
+                <h6 style="color:#9793a5;">8.11 CGPA</h6>
+            </div>
         </div>
-        <div class="row">
-            <h4>2012-2016</h4>
-            <h3>BACHELOR OF ENGINEERING, SDBCE INDORE</h3>
-            <h3>7.28 CGPA</h3>
+        <div class="row pt-5" style="border-bottom: 1px solid #0dcaf0;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12" style="color:#9793a5;">
+                <i>2012-2016</i>
+                <h6>BACHELOR OF ENGINEERING | SDBCE INDORE</h6>
+                <h6>7.28 CGPA</h6>
+            </div>
         </div>
-        <div class="row">
-            <h4>2012</h4>
-            <h3>HSC, Jawahar Navodaya Vidyalaya Khandwa</h3>
-            <h3>81%</h3>
+        
+        <div class="row pt-5" style="border-bottom: 1px solid #0dcaf0;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12" style="color:#9793a5;">
+                <i>2012</i>
+                <h6>HSC | Jawahar Navodaya Vidyalaya Khandwa</h6>
+                <h6>81%</h6>
+            </div>
         </div>
-        <div class="row">
-            <h4>2010</h4>
-            <h3>SSC, Jawahar Navodaya Vidyalaya Khandwa</h3>
-            <h3>8.8 CGPA</h3>
+
+        <div class="row pt-5" style="border-bottom: 1px solid #0dcaf0;">
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12" style="color:#9793a5;">
+                <i>2010</i>
+                <h6>SSC | Jawahar Navodaya Vidyalaya Khandwa</h6>
+                <h6>8.8 CGPA</h6>
+            </div>
         </div>
     </div>
 </body>
