--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="skills.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/fbefb00d9a.js" crossorigin="anonymous"></script>
@@ -13,47 +14,48 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container pt-5">
         <div class="row" style="padding-bottom: 60px;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <nav>
-                    <ul style="color: #E5EAF5;">
+                    <ul class="nav-list" style="color: #E5EAF5;">
                         <li class="list-ele">
                             <a class="list-item" href="/index.html">Home</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/experience.html">Work Experience</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/experience.html">Work Experience</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/certifications.html">Training & Certifications</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/certifications.html">Training & Certifications</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/skills.html">Technical Skills</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/skills.html">Technical Skills</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/qualifications.html">Qualifications</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/qualifications.html">Qualifications</a>
                         </li>
                         <br>
-                        <li>
-                            <a href="/activities.html">Activities</a>
+                        <li class="list-ele">
+                            <a class="list-item" href="/activities.html">Activities</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </div>
         <div class="row">
-            <h3>Core Java</h3>
-            <h3>HTML</h3>
-            <h3>CSS</h3>
-            <h3>JavaScript</h3>
-            <h3>AngularJs</h3>
-            <h3>NodeJs</h3>
+            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12" style="color: #9793a5;">
+                <h6>Core Java</h6>
+                <h6>HTML</h6>
+                <h6>CSS</h6>
+                <h6>JavaScript</h6>
+                <h6>AngularJs</h6>
+                <h6>SQL</h6>
+            </div>
         </div>
-    </div>
 </body>
 
 </html>
