css of skills updated

--- a/activities.html
+++ b/activities.html
@@ -48,6 +48,7 @@
         </div>
         <div class="row" style="border-bottom: 1px solid #0dcaf0;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <h3 class="heading">Activities</h3>
                 <ul style="color: #9793a5;">
                     <li>1st rank and gold medal in SIRIGANNADA PRATIBHA PARIKSHA at state level organized by Karnataka
                         Govt.</li>
