--- a/qualifications.html
+++ b/qualifications.html
@@ -49,6 +49,7 @@
         </div>
         <div class="row" style="border-bottom: 1px solid #0dcaf0;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+                <h3 class="heading">Educational Background</h3>
                 <i style="color:#9793a5;">2018-2020</i>
                 <h6 style="color:#9793a5;">MBA Information Technology | SAGE UNIVERSITY INDORE</h6>
                 <h6 style="color:#9793a5;">8.11 CGPA</h6>
