--- a/skills.html
+++ b/skills.html
@@ -47,15 +47,19 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12" style="color: #9793a5;">
-                <h6>Core Java</h6>
-                <h6>HTML</h6>
-                <h6>CSS</h6>
-                <h6>JavaScript</h6>
-                <h6>AngularJs</h6>
-                <h6>SQL</h6>
+            <div class="col-sm-6 col-md-6 col-xl-6 col-xxl-6" style="color: #9793a5;">
+                <h3 class="heading">Skill Set</h3>
+                <div class="bar learning" data-skill="Git"></div>
+                <div class="bar back basic" data-skill="SQL"></div>
+                <div class="bar back intermediate" data-skill="Angular"></div>
+                <div class="bar front advanced" data-skill="Java"></div>
+                <div class="bar front advanced" data-skill="CSS3"></div>
+                <div class="bar front expert" data-skill="HTML5"></div>
             </div>
         </div>
+
+
+    </div>
 </body>
 
 </html>
