--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/fbefb00d9a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 
@@ -18,7 +23,7 @@
     <div class="container pt-5">
         <div class="row" style="padding-bottom: 60px;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
-                <nav>
+                <!-- <nav>
                     <ul class="nav-list" style="color: #E5EAF5;">
                         <li class="list-ele">
                             <a class="list-item" href="/index.html">Home</a>
@@ -45,13 +50,43 @@
                         </li>
 
                     </ul>
+                </nav> -->
+
+                <nav class="navbar navbar-expand-md navbar-dark fr">
+                    <a class="navbar-brand" href="#"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                        <ul class="navbar-nav nav-list">
+                            <li class="nav-item list-ele">
+                                <a class="nav-link list-item" href="/index.html">Home</a>
+                            </li>
+                            <li class="nav-item list-ele">
+                                <a class="nav-link list-item" href="/experience.html">Work Experience</a>
+                            </li>
+                            <li class="nav-item list-ele">
+                                <a class="nav-link list-item" href="/certifications.html">Training & Certifications</a>
+                            </li>
+                            <li class="nav-item list-ele">
+                                <a class="nav-link list-item" href="/skills.html">Technical Skills</a>
+                            </li>
+                            <li class="nav-item list-ele">
+                                <a class="nav-link list-item" href="/qualifications.html">Qualifications</a>
+                            </li>
+                            <li class="nav-item list-ele">
+                                <a class="nav-link list-item" href="/activities.html">Activities</a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
 
             </div>
         </div>
 
         <div class="row card-main">
-            <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
+            <div class="col-xs col-sm-12 col-md-12 col-xl-12 col-xxl-12">
 
                 <h6 style="color:#0dcaf0;">Hi.</h6>
                 <h2 style="color:#0dcaf0;">I am Rakhi Ray.</h2>
