--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage | Rakhi Ray</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/fbefb00d9a.js" crossorigin="anonymous"></script>
@@ -23,35 +24,6 @@
     <div class="container pt-5">
         <div class="row" style="padding-bottom: 60px;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
-                <!-- <nav>
-                    <ul class="nav-list" style="color: #E5EAF5;">
-                        <li class="list-ele">
-                            <a class="list-item" href="/index.html">Home</a>
-                        </li>
-                        <br>
-                        <li class="list-ele">
-                            <a class="list-item" href="/experience.html">Work Experience</a>
-                        </li>
-                        <br>
-                        <li class="list-ele">
-                            <a class="list-item" href="/certifications.html">Training & Certifications</a>
-                        </li>
-                        <br>
-                        <li class="list-ele">
-                            <a class="list-item" href="/skills.html">Technical Skills</a>
-                        </li>
-                        <br>
-                        <li class="list-ele">
-                            <a class="list-item" href="/qualifications.html">Qualifications</a>
-                        </li>
-                        <br>
-                        <li class="list-ele">
-                            <a class="list-item" href="/activities.html">Activities</a>
-                        </li>
-
-                    </ul>
-                </nav> -->
-
                 <nav class="navbar navbar-expand-md navbar-dark fr">
                     <a class="navbar-brand" href="#"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -61,7 +33,7 @@
                     <div class="collapse navbar-collapse" id="collapsibleNavbar">
                         <ul class="navbar-nav nav-list">
                             <li class="nav-item list-ele">
-                                <a class="nav-link list-item" href="/index.html">Home</a>
+                                <a class="nav-link list-item" href="/">Home</a>
                             </li>
                             <li class="nav-item list-ele">
                                 <a class="nav-link list-item" href="/experience.html">Work Experience</a>
