--- a/certifications.html
+++ b/certifications.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <link rel="stylesheet" href="certificates.css">
+    <link rel="stylesheet" href="global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -33,7 +34,7 @@
                     <div class="collapse navbar-collapse" id="collapsibleNavbar">
                         <ul class="navbar-nav nav-list">
                             <li class="nav-item list-ele">
-                                <a class="nav-link list-item" href="/index.html">Home</a>
+                                <a class="nav-link list-item" href="/">Home</a>
                             </li>
                             <li class="nav-item list-ele">
                                 <a class="nav-link list-item" href="/experience.html">Work Experience</a>
