--- a/experience.html
+++ b/experience.html
@@ -59,7 +59,7 @@
         <div class="row" style="border-bottom: 1px solid #0dcaf0;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <h3 class="heading">Work Experience</h3>
-                <i style="color:#0dcaf0;">02/2022-06/2022</i>
+                <i style="color:#0dcaf0;">April 2022-Till Now</i>
                 <h5 style="color:#0dcaf0;">Jr. SEO Executive</h5>
                 <h5 style="color:#0dcaf0;">SNV Services | Indore | India</h5>
                 <ul style="color:#9793a5;">
