--- a/experience.html
+++ b/experience.html
@@ -56,23 +56,20 @@
                 </nav>
             </div>
         </div>
-        <div class="row" style="border-bottom: 1px solid #0dcaf0;">
+<!--         <div class="row" style="border-bottom: 1px solid #0dcaf0;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <h3 class="heading">Work Experience</h3>
-                <i style="color:#0dcaf0;">April 2022-Till Now</i>
-                <h5 style="color:#0dcaf0;">Jr. SEO Executive</h5>
+                <i style="color:#0dcaf0;">04/2022-Till Now</i>
+                <h5 style="color:#0dcaf0;">Software Engineer</h5>
                 <h5 style="color:#0dcaf0;">SNV Services | Indore | India</h5>
                 <ul style="color:#9793a5;">
-                    <li>Conducted on-page and off-page optimization for client websites.</li>
-                    <li>Monitored website traffic and performance using Google Analytics.</li>
-                    <li>Implemented link building campaigns to increase website authority.</li>
-                    <li>Researched and analysed competitor websites to identify SEO opportunities.</li>
-                    <li>Wrote SEO-friendly content for client websites.</li>
+                    <li>SyncAudit provide engaging platform to all stake holder in layered process. Bridge the communication gap, Improve the efficiency in audit. This application certainly saves many hours for industry. </li>
+                    <li>Technologies used – Java, Spring Boot, Html, CSS, JavaScript </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
 
-        <div class="row pt-5" style="border-bottom: 1px solid #0dcaf0;">
+<!--         <div class="row pt-5" style="border-bottom: 1px solid #0dcaf0;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <i style="color:#0dcaf0;">08/2021-10/2021</i>
                 <h5 style="color:#0dcaf0;">Software Developer Intern</h5>
@@ -84,7 +81,7 @@
                     <li>Fixed software bugs and errors identified by users.</li>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 
