--- a/skills.html
+++ b/skills.html
@@ -61,6 +61,7 @@
                 <div class="bar back basic" data-skill="SQL"></div>
                 <div class="bar back intermediate" data-skill="Angular"></div>
                 <div class="bar front advanced" data-skill="Java"></div>
+                <div class="bar front advanced" data-skill="React"></div>
                 <div class="bar front advanced" data-skill="CSS3"></div>
                 <div class="bar front expert" data-skill="HTML5"></div>
             </div>
