--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                 <h6 style="color:#0dcaf0;">Hi.</h6>
                 <h2 style="color:#0dcaf0;">I am Rakhi Ray.</h2>
                 <h2 style="color:#a4abbb;">I build things for the web.</h2>
-                <p style="color:#9793a5;">I am a Computer Science Engineer and looking for an opportunity to upskill my
+                <p style="color:#9793a5;">I am a Software Engineer and looking for an opportunity to upskill my
                     technical knowledge.
-                    <br> My skill set includes HTML, CSS, JavaScript, SQL and Core Java.</p>
+                    <br> My skill set includes ReactJs, HTML, CSS, JavaScript, SQL and Core Java.</p>
 
                 <div class="social-icons">
                     <a style="text-decoration: none;" href="mailto:rakhiiray14@gmail.com" target="_blank">
