--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </a>
                 </div>
                 <br>
-                <a href="" download class="btn btn-outline-info">Download Resume</a>
+<!--                 <a href="" download class="btn btn-outline-info">Download Resume</a> -->
             </div>
         </div>
     </div>
