--- a/experience.html
+++ b/experience.html
@@ -56,32 +56,37 @@
                 </nav>
             </div>
         </div>
-<!--         <div class="row" style="border-bottom: 1px solid #0dcaf0;">
+        <div class="row" style="border-bottom: 1px solid #0dcaf0;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
                 <h3 class="heading">Work Experience</h3>
-                <i style="color:#0dcaf0;">04/2022-Till Now</i>
-                <h5 style="color:#0dcaf0;">Software Engineer</h5>
-                <h5 style="color:#0dcaf0;">SNV Services | Indore | India</h5>
+                <h5 style="color:#0dcaf0;">Software Engineer | SyncWell Infotech Pvt. Ltd.</h5>
+                <i style="color:rgb(139, 70, 139);">04/2021 - Till Now</i>
+                <h5 style="color:#0dcaf0; padding-top: 8px;">PROJECTS</h5>
+                <h6 style="color:#0dcaf0; padding-top: 8px;">SYNCAUDIT LPA APPLICATION | <i
+                        style="color:rgb(139, 70, 139)">04/2022 - Till
+                        Now</i></h6>
                 <ul style="color:#9793a5;">
-                    <li>SyncAudit provide engaging platform to all stake holder in layered process. Bridge the communication gap, Improve the efficiency in audit. This application certainly saves many hours for industry. </li>
+                    <li>SyncAudit provide engaging platform to all stake holder in layered process. Bridge the
+                        communication gap, Improve the efficiency in audit. This application certainly saves many hours
+                        for industry. </li>
                     <li>Technologies used – Java, Spring Boot, Html, CSS, JavaScript </li>
                 </ul>
             </div>
-        </div> -->
+        </div>
 
-<!--         <div class="row pt-5" style="border-bottom: 1px solid #0dcaf0;">
+        <div class="row pt-5" style="border-bottom: 1px solid #0dcaf0;">
             <div class="col-sm-12 col-md-12 col-xl-12 col-xxl-12">
-                <i style="color:#0dcaf0;">08/2021-10/2021</i>
-                <h5 style="color:#0dcaf0;">Software Developer Intern</h5>
-                <h5 style="color:#0dcaf0;">Techcoopers Software Solutions Pvt Ltd | Indore | India</h5>
+                <h6 style="color:#0dcaf0; padding-top: 8px;">TNPLIVE ASSESMENT | <i
+                        style="color:rgb(139, 70, 139)">04/2021 - 03/2022</i></h6>
                 <ul style="color:#9793a5;">
-                    <li>Created user-friendly screens using HTML and CSS.</li>
-                    <li>Integrated third party API in NodeJS app to fetch data.</li>
-                    <li>Stored data from third party app to our app database.</li>
-                    <li>Fixed software bugs and errors identified by users.</li>
+                    <li>TnpLive is an assessment platform for students and companies. An employability test has one of
+                        the most desirable questionnaires for entire competitive exams and campus hiring. Multiple user
+                        roles are designed like super admin, admin, candidate dashboard.</li>
+                    <li>Technologies used –React JS, Html, CSS, JavaScript, Material UI, Java, Spring Boot, SQL</li>
+
                 </ul>
             </div>
-        </div> -->
+        </div>
     </div>
 </body>
 
