--- a/experience.html
+++ b/experience.html
@@ -66,9 +66,7 @@
                         style="color:rgb(139, 70, 139)">04/2022 - Till
                         Now</i></h6>
                 <ul style="color:#9793a5;">
-                    <li>SyncAudit provide engaging platform to all stake holder in layered process. Bridge the
-                        communication gap, Improve the efficiency in audit. This application certainly saves many hours
-                        for industry. </li>
+                    <li>SyncAudit provides an engaging platform for all stakeholders in a layered process, bridging the communication gap and improving efficiency in audits. This application certainly saves many hours for the industry. </li>
                     <li>Technologies used – Java, Spring Boot, Html, CSS, JavaScript </li>
                 </ul>
             </div>
