--- a/experience.html
+++ b/experience.html
@@ -77,9 +77,7 @@
                 <h6 style="color:#0dcaf0; padding-top: 8px;">TNPLIVE ASSESMENT | <i
                         style="color:rgb(139, 70, 139)">04/2021 - 03/2022</i></h6>
                 <ul style="color:#9793a5;">
-                    <li>TnpLive is an assessment platform for students and companies. An employability test has one of
-                        the most desirable questionnaires for entire competitive exams and campus hiring. Multiple user
-                        roles are designed like super admin, admin, candidate dashboard.</li>
+                    <li>TnpLive is an assessment platform for students and companies. The employability test offers one of the most desirable questionnaires for competitive exams and campus hiring. Multiple user roles, such as super admin, admin, and candidate dashboard, have been designed.</li>
                     <li>Technologies used –React JS, Html, CSS, JavaScript, Material UI, Java, Spring Boot, SQL</li>
 
                 </ul>
